src/style/index.css
#header {
  background-color: #2971FF;
}
.thumbnail.self, #header-img.default-header {
  background-image: url("./logo.svg");
  background-repeat: no-repeat;
  background-position: center left;
}
.thumbnail.self {
  background-color: #0C1E3E;
}

.score,
.reddiquette,
.midcol.unvoted,
.entry .buttons li.save-button,
.entry .buttons li.give-gold-button,
.entry .buttons li.report-button,
#header .redditname,
#login-form .c-checkbox input,
#login-form .c-checkbox label,
#remember-me input,
#remember-me label {
  display: none;
}

.login-form-side .status { display: block }


html, body {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  background: #f4f7f9;
  font-family: "Source Sans Pro", "Helvetica Neue", arial, sans-serif;
  font-weight: 400;
  color: #132f4b;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

.error {
  color: red;
  font-weight: bold;
}

.CodeMirror {
  min-height: 200px;
}

#app {
  height: 100%;
}

a {
  color: #2970ff;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.clearfloat:after {
  content: "";
  display: table;
  clear: both;
}


.header {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 56px;
  padding: 0;
  background: #0c1e3e;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
  z-index: 50;
}

.header h1 {
  float: left;
  margin: 0;
  padding: 0 15px;
  font-size: 24px;
  line-height: 56px;
  font-weight: 400;
  color: #FFF;
}

.header nav {
  float: left;
  font-size: 100%;
}

.header nav a {
  display: inline-block;
  height: 56px;
  line-height: 56px;
  padding: 0 15px;
  min-width: 50px;
  text-align: center;
  background: rgba(255,255,255,0);
  text-decoration: none;
  color: #d4f0fd;
  will-change: background-color;
}

.header nav a:hover,
.header nav a:active {
  background: rgba(255,255,255,0.2);
}

.header nav a.active {
  background: rgba(255,255,255,0.4);
}

.page {
  padding: 56px 20px;
  min-height: 100%;
  width: 100%;
}

.login-form fieldset {
  background-color: white;
}

.markdown-editor {
  display: flex;
}
.markdown-editor .editor {
  display: flex;
  flex-direction: row;
}
.markdown-editor .preview {
  display: flex;
  flex-direction: row;
  margin: 0 50px;
}

.login-form a {
  display: inline-block;
  margin-left: 8px;
}

.change-password-form,
.forgotten-password-form,
.reset-password-form {
  width: 600px;
}

.message-ct {
  height: 64px;
  margin: 16px 0;
  position: relative;
}
.message-icon {
  height: 62px;
  width: 64px;
  text-align: center;
  line-height: 62px;
  font-size: 24px;
  color: #ffffff;
}
.message-text {
  position: absolute;
  left: 84px;
  top: 50%;
  transform: translateY(-50%);
}
.message-header {
  font-size: 18px;
  vertical-align: middle;
}
.message-body {
  vertical-align: middle;
}
.message-success {
  border: 1px solid #41bf53;
}
.message-success .message-icon {
  background: #41bf53;
}
.message-success .message-header {
  color: #41bf53;
}
.message-error {
  border: 1px solid #bf4153;
}
.message-error .message-icon {
  background: #bf4153;
}
.message-error .message-header {
  color: #bf4153;
}

.proposal-meta-data {
  margin-bottom: 8px;
}
.proposal-meta-data-name {
  width: 120px;
  margin-right: 8px;
  text-align: right;
  font-weight: bold;
  float: left;
}
.proposal-meta-data-value {
  float: left;
}

.react-file-reader {
  margin-top: 16px;
}

.attached-image {
  display: block;
  float: left;
}
.attached-image-remove {
  display: block;
  float: left;
  cursor: pointer;
  background: #bf4153;
  width: 24px;
  height: 24px;
  line-height: 24px;
  text-align: center;
  margin-left: 8px;
  color: #ffffff;
  border-radius: 2px;
}
.attached-image-remove:hover {
  text-decoration: none;
  opacity: 0.8;
}

.proposal-save {
  margin-top: 16px;
}

/* loading */

@keyframes spin {
  30% {
    transform: rotate(182deg);
  }
  40% {
    transform: rotate(180deg);
  }
  50% {
    transform: rotate(180deg);
  }
  80% {
    transform: rotate(362deg);
  }
  90% {
    transform: rotate(360deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
.loading {
  justify-content: center;
  align-items: center;
  height: 100%;
}
.logo {
  position: absolute;
  height: 150px;
  width: 200px;
  background-image: url("./spinner.svg");
  background-position: 0px 0px;
  background-repeat: no-repeat;
}
.spin {
  animation: spin 3s ease-in-out infinite;
}

